perf(core): reduce sparse commit allocation